ui/fail/value/bad_as_ref.stderr
error[E0502]: cannot borrow `v` as mutable because it is also borrowed as immutable
  --> $DIR/bad_as_ref.rs:8:5
   |
6  |     let v2 = v.as_ref();
   |              - immutable borrow occurs here
7  |
8  |     v.borrow_mut::<i32>();
   |     ^^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
9  |
10 |     println!("{:p}", v2);
   |                      -- immutable borrow later used here
